# Tab-Maker

./: README.md  golden.cho  golden_new.rtf  pyproject.toml  song.rtf
src/tab_maker/: __init__.py  cho_to_rtf_cli.py  chord_layout.py  chordpro.py  chordpro_parser.py  cli.py  docx_export.py  models.py  parser.py  render_utils.py  rtf.py  text.py
