[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tab-maker"
version = "0.1.0"
description = "Convert Ultimate Guitar chord sheets into ChordPro format"
readme = "README.md"
authors = [{name = "Ben"}]
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
